--- a/.env.dev
+++ b/.env.dev
@@ -2,9 +2,9 @@ AMBIENTE_PROCESSO=desenvolvimento
 
 # Configurações de conexão com o banco de dados
 DB_HOST=localhost
-DB_DATABASE='seusDadosAqui'
-DB_USER='seusDadosAqui'
-DB_PASSWORD='seusDadosAqui'
+DB_DATABASE='logaritmos'
+DB_USER='' # <- coloca aqui o nome que tem no MySql do user
+DB_PASSWORD='' # <- coloca aqui a senha do dito usuario
 DB_PORT=3306
 
 # Configurações do servidor de aplicação
