--- a/.env.dev
+++ b/.env.dev
@@ -4,7 +4,7 @@ AMBIENTE_PROCESSO=desenvolvimento
 DB_HOST=localhost
 DB_DATABASE='logaritmos'
 DB_USER='root' # <- coloca aqui o nome que tem no MySql do user
-DB_PASSWORD='erick' # <- coloca aqui a senha do dito usuario
+DB_PASSWORD='dapanCMIJB21@' # <- coloca aqui a senha do dito usuario
 DB_PORT=3306
 
 # Configurações do servidor de aplicação
