--- a/.env.dev
+++ b/.env.dev
@@ -1,14 +1,14 @@
 AMBIENTE_PROCESSO=desenvolvimento
 
 # Configurações de conexão com o banco de dados
-DB_HOST=localhost
-DB_DATABASE='logaritmos'
-DB_USER='root' # <- coloca aqui o nome que tem no MySql do user
-DB_PASSWORD='dapanCMIJB21@' # <- coloca aqui a senha do dito usuario
+DB_HOST=mysql
+DB_DATABASE=logaritmos
+DB_USER=root # <- coloca aqui o nome que tem no MySql do user
+DB_PASSWORD=urubu100 # <- coloca aqui a senha do dito usuario
 DB_PORT=3306
 
 # Configurações do servidor de aplicação
 APP_PORT=3333
-APP_HOST=localhost
+APP_HOST=container-web
 
 # importante: caso sua senha contenha caracteres especiais, insira-a entre 'aspas'
