fix: Corrige select de estados e select de anos na tela comparativos

--- a/.env.dev
+++ b/.env.dev
@@ -4,7 +4,7 @@ AMBIENTE_PROCESSO=desenvolvimento
 DB_HOST=mysql
 DB_DATABASE=logaritmos
 DB_USER=root # <- coloca aqui o nome que tem no MySql do user
-DB_PASSWORD=urubu100 # <- coloca aqui a senha do dito usuario
+DB_PASSWORD=root # <- coloca aqui a senha do dito usuario
 DB_PORT=3306
 
 # Configurações do servidor de aplicação
