--- a/.env.dev
+++ b/.env.dev
@@ -1,10 +1,10 @@
 AMBIENTE_PROCESSO=desenvolvimento
 
 # Configurações de conexão com o banco de dados
-DB_HOST=mysql
+DB_HOST=localhost
 DB_DATABASE=logaritmos
 DB_USER=root # <- coloca aqui o nome que tem no MySql do user
-DB_PASSWORD=urubu100 # <- coloca aqui a senha do dito usuario
+DB_PASSWORD=V20r18p10 # <- coloca aqui a senha do dito usuario
 DB_PORT=3306
 
 # Configurações do servidor de aplicação
