--- a/.env
+++ b/.env
@@ -1,14 +1,13 @@
 AMBIENTE_PROCESSO=producao
 
 # Configurações de conexão com o banco de dados
-DB_HOST='localhost'
+DB_HOST='mysql'
 DB_DATABASE='logaritmos'
 DB_USER='root'
-DB_PASSWORD='V20r18p10'
-DB_PORT='3 m'
+DB_PASSWORD='urubu100'
+DB_PORT='3306'
 
 # Configurações do servidor de aplicação
 APP_PORT=8080
 APP_HOST=localhost
-\
 # importante: caso sua senha contenha caracteres especiais, insira-a entre 'aspas'
